<resources>
    <string name="app_name">Weather</string>
    <string name="weather">Weather</string>

    <string name="city">City</string>
    <string name="choose_city">choose city</string>
    <string name="humidity">show humidity</string>
    <string name="wind">show wind</string>

    <string name="cityParam" translatable="false">city</string>
    <string name="humidityParam" translatable="false">humidity</string>
    <string name="windParam" translatable="false">wind</string>

    <string name="cityLabel">City: </string>
    <string name="temperatureLabel">Temperature: </string>
    <string name="humidityLabel">Humidity: </string>
    <string name="windLabel">Wind: </string>
    <string name="pressureLabel">Pressure: </string>

    <string name="temperatureValue">+15°</string>
    <string name="humidityValue">67%</string>
    <string name="windValue">west 18 m/s</string>
    <string name="pressureValue">740 mm</string>

    <string-array name="cities">
        <item>Moscow</item>
        <item>Saint Petersburg</item>
        <item>Novosibirsk</item>
        <item>Unknown city</item>
    </string-array>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="empty" translatable="false">Empty</string>
    <string name="dateFormat" translatable="false">EEE, d MMM</string>
    <string name="cityConfirmation">Want to know wheather in %s?</string>
    <string name="confirmBtn">Confirm</string>
    <string name="theme" translatable="false">theme</string>
    <string name="developer">Developer</string>

    <array name="w_icons" translatable="false">
        <item>windy</item>
        <item>rainy</item>
        <item>sunny</item>
    </array>

    <array name="w_temperature" translatable="false">
        <item>+10°</item>
        <item>+12°</item>
        <item>+15°</item>
    </array>
    <string name="title_activity_test" translatable="false">TestActivity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="hello">Your city</string>
    <string name="needLocation">Need your location!</string>
    <string name="errGoogleConnect">Can\'t connect to Google Play Services!</string>

    <string name="place_not_found">Place not found</string>
    <string name="weather_sunny" translatable="false">&#xf00d;</string>
    <string name="weather_clear_night" translatable="false">&#xf02e;</string>
    <string name="weather_foggy" translatable="false">&#xf014;</string>
    <string name="weather_cloudy" translatable="false">&#xf013;</string>
    <string name="weather_rainy" translatable="false">&#xf019;</string>
    <string name="weather_snowy" translatable="false">&#xf01b;</string>
    <string name="weather_thunder" translatable="false">&#xf01e;</string>
    <string name="weather_drizzle" translatable="false">&#xf01c;</string>
    <string name="errGoogleConnectionSusspended">connection susspended</string>
    <string name="locationDetected">Location detected</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="feedback">Обратная связь</string>
    <string name="just_a_test">Just a test</string>
    <string name="help">Help</string>
    <string name="add_city">Add city</string>
    <string name="description">Description</string>
    <string name="have_a_nice_day">Have a nice day!</string>
    <string name="communicate">Communicate</string>
    <string name="my_location">My location</string>
    <string name="show_sensors">Show sensor data</string>
    <string name="no_humidity">Humidity sensor not found</string>
    <string name="no_temperrature">Temperature sensor not found</string>
</resources>
