<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_add"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="10"
        app:showAsAction="ifRoom|withText"
        android:title="@string/add_city" />
    <item
        android:id="@+id/menu_sensor"
        android:icon="@android:drawable/ic_menu_agenda"
        android:orderInCategory="10"
        app:showAsAction="ifRoom|withText"
        android:title="@string/show_sensors" />
    <item
        android:id="@+id/menu_location"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:orderInCategory="10"
        app:showAsAction="ifRoom|withText"
        android:title="@string/my_location" />
</menu>