<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:background="@drawable/purple_bg"
    android:gravity="top"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_gravity="center"
        app:srcCompat="@drawable/sunny"
        android:layout_height="90dp"
        android:layout_width="90dp"
        android:contentDescription="@string/description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weather"
        android:textSize="20sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:text="@string/have_a_nice_day" />
    </LinearLayout>
</LinearLayout>
